Really fix z-index issue

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -1,3 +1,4 @@
 @import "minima";
 
 dt { margin: 1em auto auto auto; font-weight: bold; }
+.site-nav { z-index: 1; }
